--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "dayjs": "^1.10.4",
+    "vue": "^3.0.0",
+    "vue-i18n": "^9.1.6"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
